--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "password-generator": "^2.3.2",
     "request": "^2.88.2",
+    "sib-api-v3-sdk": "^8.5.0",
     "uuidv4": "^6.2.13"
   }
 }
