--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.2.3",
+    "axios": "^1.3.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "bootstrap": "^5.2.3",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -25,6 +26,8 @@
     "password-generator": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "reactstrap": "^9.1.5",
     "request": "^2.88.2",
     "sib-api-v3-sdk": "^8.5.0",
     "uuidv4": "^6.2.13"
