--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "firebase-admin": "^11.5.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "password-generator": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
