--- a/server/api/package.json
+++ b/server/api/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node index",
-	"dev": "nodemon index"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "dependencies": {
+    "@google-cloud/storage": "^6.9.5",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.3",
     "bcryptjs": "^2.4.3",
@@ -22,6 +23,7 @@
     "firebase-admin": "^11.5.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "password-generator": "^2.3.2",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
