--- a/server/api/package.json
+++ b/server/api/package.json
@@ -23,6 +23,7 @@
     "firebase-admin": "^11.5.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
     "password-generator": "^2.3.2",
     "postcss": "^8.4.21",
