--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.9",
     "axios": "^1.3.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
