--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "proxy": "http://localhost:5000",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/breadworks-accounting/",
+    "build": "vite build",
     "preview": "vite preview",
     "deploy": "gh-pages -d build"
   },
