--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
     "dev": "nodemon index",
-    "heroku-postbuild" : "mdir uploads"
+    "heroku-postbuild" : "mkdir uploads"
   },
   "dependencies": {
     "@google-cloud/storage": "^6.9.5",
